After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 629199 - fix a couple of compiler warnings
fix a couple of compiler warnings
Status: RESOLVED FIXED
Product: pygobject
Classification: Bindings
Component: introspection
unspecified
Other All
: Normal normal
: ---
Assigned To: Nobody's working on this now (help wanted and appreciated)
Python bindings maintainers
Depends on:
Blocks:
 
 
Reported: 2010-09-09 17:59 UTC by johnp
Modified: 2010-09-17 13:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix a couple of compiler warnings (2.10 KB, patch)
2010-09-09 17:59 UTC, johnp
committed Details | Review

Description johnp 2010-09-09 17:59:23 UTC
fixes warnings
Comment 1 johnp 2010-09-09 17:59:26 UTC
Created attachment 169882 [details] [review]
fix a couple of compiler warnings
Comment 2 Tomeu Vizoso 2010-09-17 13:25:06 UTC
Attachment 169882 [details] pushed as 2da8da5 - fix a couple of compiler warnings