fix a couple of compiler warnings

https://bugzilla.gnome.org/show_bug.cgi?id=629199